components/gaugeVoting/gaugeVoting.module.css
.projectCardContainer {
  width: 100%;
  border-radius: 10px;
  padding: 24px;
}

.textField {
  padding: 12px 0px
}

.inputTitleContainer {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.inputTitle {
  padding-bottom: 6px;
  margin-left: 12px;
}

.balances {
  display: flex;
  justify-content: flex-end;
  padding-right: 12px;
  padding-bottom: 6px;
}

.value {
  cursor: pointer;
  display: flex;
}

.actionButton {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 24px;
}

.calculationResults {
  display: flex;
  flex-direction: column;
  padding: 12px;
  padding-top: 48px;
}

.calculationResult {
  display: grid;
  grid-template-columns: 40% 30% 30%;
  place-items: center;
}

.bold {
  font-weight: bold;
}

.split {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 48px;
  box-sizing: border-box;
}

.sectionHeader {
  padding-bottom: 24px;
}

.gaugeVotesTable {
  display: flex;
  flex-direction: column;
  border: 1px solid rgba(128,128,128,0.5);
  padding: 12px;
  border-radius: 10px;
  width: 100%;
}

@media screen and (max-width: 1000px) {
  .split {
    grid-template-columns: 1fr;
  }
}

@media screen and (max-width: 600px) {
  .projectCardContainer {
    min-height: 0;
  }
}

